# glsl-optimizer

./: .gitignore  CMakeLists.txt  Sanitizers.cmake  glsl_optimizer.symbols  rename_symbols.py
contrib/: CMakeLists.txt
src/: CMakeLists.txt
src/compiler/glsl/: ast_to_hir.cpp  builtin_functions.cpp  glsl_optimizer.cpp  glsl_parser_extras.cpp  glsl_parser_extras.h  ir.h  ir_print_glsl_visitor.cpp  standalone_scaffolding.cpp
src/glsl/: ast_function.cpp  ast_to_hir.cpp  builtin_functions.cpp  builtin_types.cpp  glsl_lexer.cpp  glsl_optimizer.cpp  glsl_parser.cpp  glsl_parser_extras.cpp  glsl_parser_extras.h  glsl_symbol_table.cpp  glsl_types.cpp  glsl_types.h  ir.cpp  ir.h  ir_builder.cpp  ir_builder.h  ir_clone.cpp  ir_constant_expression.cpp  ir_expression_flattening.cpp  ir_function.cpp  ir_function_detect_recursion.cpp  ir_print_glsl_visitor.cpp  ir_print_glsl_visitor.h  ir_print_metal_visitor.cpp  ir_print_visitor.cpp  ir_unused_structs.cpp  ir_validate.cpp  ir_variable_refcount.cpp  link_atomics.cpp  link_functions.cpp  link_interface_blocks.cpp  link_uniform_block_active_visitor.cpp  link_uniform_blocks.cpp  link_uniform_initializers.cpp  link_uniforms.cpp  link_varyings.cpp  linker.cpp  loop_analysis.cpp  loop_analysis.h  loop_controls.cpp  (+40 more)
src/glsl/glcpp/: glcpp-lex.c  glcpp-parse.c  glcpp-parse.h  glcpp.h  pp.c
src/mesa/main/: errors.h  imports.c  imports.h
src/mesa/program/: hash_table.h  prog_hash_table.c  symbol_table.c  symbol_table.h
src/util/: hash_table.c  hash_table.h  ralloc.c  ralloc.h
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  glsl_optimizer_tests.cpp  unit_tests.cpp
